kafka-ui/kafbat-ui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafbat-ui
  namespace: kafka-ui
  labels:
    app: kafbat-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafbat-ui
  template:
    metadata:
      labels:
        app: kafbat-ui
    spec:
      containers:
        - name: kafbat-ui
          image: ghcr.io/kafbat/kafka-ui:latest
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "512Mi"
              cpu: "200m"
            limits:
              memory: "768Mi"
              cpu: "300m"
          volumeMounts:
            - name: kafka-ui-tls-secret
              mountPath: /etc/ssl/ca.crt
              subPath: ca.crt
              readOnly: true
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 30
      volumes:
        - name: kafka-ui-tls-secret
          secret:
            secretName: kafka-ui-internal-tls-secret
---
apiVersion: v1
kind: Service
metadata:
  name: kafbat-ui
  namespace: kafka-ui
  labels:
    app: kafbat-ui
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: kafbat-ui
