kafka-ui/kafka-ui-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kafka-ui-route
  namespace: kafka-ui
spec:
  parentRefs:
    - name: kong
      sectionName: proxy
      namespace: knep
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: kafbat-ui
          namespace: kafka-ui
          port: 8080
